# FileCrypter

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
FileCrypter/: __main__.py  cli_tool.py  directory_encryption.py  encrypt_decrypt.py  main.py
tests/: test.txt
